fixup! fixup! bpo-40619: Correctly handle error text and offset for <string> input